# CrossMorphy

./: .gitignore  CMakeLists.txt  CrossMorphy.cbp  MorphAnalyzer.cpp  MorphAnalyzer.h  main.cpp
DAWG/dawgdic/: base-types.h
analyze/: DictAnalyzer.cpp  DictAnalyzer.h  NounPairs.cpp  NounPairs.h  Parsed.h  SufCollection.h  SufProcessor.cpp  SufProcessor.h
base/: ITagPrinter.h  MorphChars.cpp  MorphChars.h  MorphClass.cpp  MorphClass.h  MorphClassContainer.cpp  MorphClassContainer.h  TagConverter.cpp  TagConverter.h
docs/: doxygen.config
include/CrossMorphy/: BinaryFileException.h  Config.h  MorphAnalyzer.h
include/CrossMorphy/Analyze/: DictAnalyzer.h  IAnalyzer.h  NounPairs.h  Parsed.h  SufCollection.h  SufProcessor.h
include/CrossMorphy/Base/: ITagPrinter.h  MorphChars.h  MorphClass.h  MorphClassContainer.h  TagConverter.h
include/CrossMorphy/DAWG/: BuildFactory.h  Dictionary.h
include/CrossMorphy/TagPrinter/: CrossLexTagPrinter.h
src/: CMakeLists.txt  Config.cpp  MorphAnalyzer.cpp  main.cpp
src/Analyze/: DictAnalyzer.cpp  NounPairs.cpp  SufProcessor.cpp
src/Base/: MorphChars.cpp  MorphClass.cpp  MorphClassContainer.cpp  TagConverter.cpp
src/TagPrinter/: CrossLexTagPrinter.cpp
tag_printer/: CrossLexTagPrinter.cpp  CrossLexTagPrinter.h
