project(CrossMorphy)
cmake_minimum_required(VERSION 3.0)
find_package(Boost COMPONENTS locale REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
set (EXECUTABLE_OUTPUT_PATH bin/)
add_subdirectory (src)
include_directories (include/CrossMorphy)
add_executable(CrossMorphy ${SOURCE_FILES})
target_link_libraries(CrossMorphy ${Boost_LIBRARIES})
