project(CrossMorphy)
cmake_minimum_required(VERSION 2.8)
find_package(Boost COMPONENTS locale REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
set (EXECUTABLE_OUTPUT_PATH bin/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
add_subdirectory (src)
include_directories (include/CrossMorphy)
add_executable(CrossMorphy ${SOURCE_FILES})
target_link_libraries(CrossMorphy ${Boost_LIBRARIES})
